[package]
name = "video-generator-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Web to Video Converter"]
description = "WebAssembly video generator for browser"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlIFrameElement",
    "HtmlVideoElement",
    "MediaRecorder",
    "MediaRecorderOptions",
    "MediaStream",
    "MediaStreamTrack",
    "BlobEvent",
    "Performance",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
lto = true
